# mnist-on-k8s

./: .gitignore  Dockerfile.api  Dockerfile.train  Makefile  README.md  architecture.drawio  metadata.json  pyproject.toml
.github/workflows/: ci-cd.yml
drift/: drift_job.py
features/feast_repo/: feature_store.yaml  features.py
infra/helm/api/: Chart.yaml  values.yaml
infra/helm/api/templates/: deployment.yaml  service.yaml
infra/mlflow/: Dockerfile  mlflow.yaml
infra/mlflow/minio/: mlflow_minio.yaml
infra/mlflow/postgres/: mlflow_postgres.yaml
models/: complex_cnn.py  mnist_logreg.py  simple_cnn.py
models/datamodules/: helpers.py  mnist.py
pipelines/: feature_pipeline.py  train.py
serving/: app.py  feast_client.py  metrics.py  model_loader.py
web/: index.html  script.js
