
[project]
name = "mnist-on-k8s"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "prometheus-client>=0.18",
  "polars>=0.20",
  "numpy>=1.26",
  "pillow>=10.2",
  "torch>=2.1",
  "pytorch-lightning>=2.2",
  "torchvision>=0.16",
  "feast[redis]>=0.42",
  "redis>=4.2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
]
